--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,23 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME=Social_newtwork
+APP_ENV=production
+APP_KEY=base64:kosCUQL7OGbXy0Ci5rnOfDPrOn4IFzv1oc667kpEcAg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://:social-network-project.online
+
+SANCTUM_STATEFUL_DOMAINS=social-network-project.online
+SESSION_DOMAIN=social-network-project.online
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u1833119_default
+DB_USERNAME=u1833119_default
+DB_PASSWORD=PDj5yArIJ8Lx2O94
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
